--- a/Moodboard.css
+++ b/Moodboard.css
@@ -77,7 +77,7 @@ body {
 .footer {
     width: 100%; /* Ensures footer occupies full width */
     padding: 20px;
-    background-color: #001f3f;;
+    background-color: #001f3f;
     color: #FFD700;
     text-align: center;
 }
