--- a/index.css
+++ b/index.css
@@ -49,22 +49,25 @@ h1 {
 
 /* Footer Styling */
 .footer {
-    width: 100%; /* Ensures footer occupies full width */
+    margin-top: 50px;
     padding: 20px;
     background-color: #001f3f; /* Slightly darker blue for footer */
     color: #FFD700;
-    text-align: center;
+}
+.footer p {
+    margin: 0;
+    text-align: center
 }
 
 /* Navbar Styling */
 .navbar {
-    width: 100%; /* Ensures navbar occupies full width */
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: 001f3f4;
-}
+    background-color: #001f3f; /* Slightly darker blue for footer */
+    
+    }
 
 .navbar-logo img {
     width: 120px;
