--- a/ActualPageCSS/HomepageS.css
+++ b/ActualPageCSS/HomepageS.css
@@ -168,7 +168,7 @@ body {
     top: 70%;
     left: 50%;
     transform: translate(-50%, -80%);
-    background-color: #cbc081;
+    background-color: #FFD700;
     padding: 2rem;
     border-radius: 3rem;
     width: 80%;
